--- a/Greedy Algorithms/Greedy Algorithms.vcxproj
+++ b/Greedy Algorithms/Greedy Algorithms.vcxproj
@@ -139,6 +139,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="DeliveryDriver.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="VendingMachine.cpp" />
   </ItemGroup>
