--- a/Greedy Algorithms/Greedy Algorithms.vcxproj.filters
+++ b/Greedy Algorithms/Greedy Algorithms.vcxproj.filters
@@ -21,6 +21,9 @@
     <ClCompile Include="VendingMachine.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="DeliveryDriver.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Programs.h">
