--- a/Greedy Algorithms/Greedy Algorithms.vcxproj.filters
+++ b/Greedy Algorithms/Greedy Algorithms.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClCompile Include="DeliveryDriver.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="InventoryManager.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Programs.h">
